[package]
name = "oxygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
color-eyre = "0.6.5"
cpal = "0.16.0"
anyhow = "1.0.98"
dasp = { version = "0.11.0", features = ["interpolate", "interpolate-linear", "signal"] }
rusqlite = { version = "0.37.0", features = ["chrono"] }
chrono = "0.4.41"
byteorder = "1.5.0"
hound = "3.5.1"
tempfile = "3.8.1"
ctrlc = "3.4.7"
vorbis-encoder = "0.1.1"  # Pure Rust Vorbis encoder
